changed to and from to start_at and end_at

--- a/app/views/refinery/calendar/admin/events/_form.html.erb
+++ b/app/views/refinery/calendar/admin/events/_form.html.erb
@@ -17,13 +17,13 @@
   </div>
 
   <div class='field'>
-    <%= f.label :from -%>
-    <%= f.text_field :from, :class => 'datetime_range'  -%>
+    <%= f.label :start_at -%>
+    <%= f.text_field :start_at, :class => 'datetime_range'  -%>
   </div>
 
   <div class='field'>
-    <%= f.label :to -%>
-    <%= f.text_field :to, :class => 'datetime_range'  -%>
+    <%= f.label :end_at -%>
+    <%= f.text_field :end_at, :class => 'datetime_range'  -%>
   </div>
 
   <div class='field'>
